fix: disable scrollbar

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -44,6 +44,7 @@
       $color-additional-4
     );
     -webkit-background-clip: text;
+    background-clip: text;
     background-size: 500% auto;
     -webkit-text-fill-color: transparent;
     margin: 0;
@@ -123,7 +124,7 @@
 
     .github-logo {
       fill: $color-main;
-      transition: fill 0.3s linear, transform 0.3s linear;
+      transition: fill 0.3s linear, transform 0.3s cubic-bezier(1, -0.27, 0, 0.94);
     }
 
     &:hover {
