--- a/src/index.scss
+++ b/src/index.scss
@@ -14,10 +14,10 @@ body {
   width: 100vw;
   overflow-x: hidden;
   background-color: $color-primary;
-  padding-right: calc(100vw - 100%);
 
-  @media (hover: none) {
-    padding: 0;
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
   }
 }
 
@@ -44,6 +44,9 @@ body {
   padding: 30px;
 
   @include tablet {
+    padding: 5px 20px;
+  }
+  @include mobile {
     padding: 5px 10px;
   }
 }
