--- a/src/pages/welcomePage/WelcomePage.module.scss
+++ b/src/pages/welcomePage/WelcomePage.module.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  padding: 30px 10px;
+
+  @include mobile {
+    padding: 30px 10px;
+  }
 }
 
 .heading {
